# MacDirStat

./: index.html  package.json  pnpm-lock.yaml
.github/: RELEASE_SETUP.md
.github/workflows/: release.yml
Plans/: 01-cushion-treemap.md  02-treemap-options.md  03-freespace-unknown.md  04-extension-list.md  05-settings.md  06-treeview-columns.md  07-treeview-navigation.md  08-refresh.md  09-file-operations.md  10-user-cleanups.md  11-keyboard-shortcuts.md  12-drag-and-drop.md  13-panel-layout.md
docs/plans/: 2026-03-10-cleanup-recommendations-design.md  2026-03-10-cleanup-recommendations-plan.md
src/: App.svelte
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  models.rs  scanner.rs  scanner_tree.rs  state.rs
src-tauri/src/cleanup_patterns/: app_data.rs  browsers.rs  cloud_storage.rs  containers.rs  dev_tools.rs  ides.rs  media.rs  mod.rs  package_managers.rs  system.rs
src-tauri/src/platform/: macos.rs
src/lib/: api.ts  settings.ts  types.ts
src/lib/components/: Breadcrumb.svelte  CleanupCategoryGroup.svelte  CleanupConfirmDialog.svelte  CleanupRecommendationItem.svelte  CleanupRecommendations.svelte  CleanupSettings.svelte  ContextMenu.svelte  DropOverlay.svelte  ExtensionList.svelte  FullDiskAccessPrompt.svelte  LogViewer.svelte  MenuDropdown.svelte  PanelResizer.svelte  ProgressBar.svelte  SettingsDialog.svelte  StatusBar.svelte  Toolbar.svelte  TreeColumnHeader.svelte  TreeRow.svelte  TreeView.svelte  Treemap.svelte  TreemapOptionsPanel.svelte
src/lib/stores/: cleanupRecommendationStore.ts  (+9 more)
(+13 files in other folders)
