[package]
name = "macdirstat"
version = "0.1.0"
description = "Cross-platform disk usage visualization tool"
authors = ["you"]
edition = "2021"

[lib]
name = "macdirstat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
tokio = { version = "1", features = ["sync"] }
trash = "5"
sysinfo = "0.34"
tauri-plugin-store = "2"
libc = "0.2"
dashmap = "6"
